# typeoutloud

./: README.md  package-lock.json  package.json  shell.nix
src/: App.tsx  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_service.rs  main.rs
src/Components/ContextMenu/: contextmenu.tsx
src/Components/Footer/: footer.css  footer.tsx
src/Components/Header/: header.css  header.tsx
src/Components/Menu/: menu.css  menu.tsx
src/Components/SettingsSlider/: TooltipSlider.tsx  settingsslider.tsx
src/Components/SettingsSubScreen/: settingssubscreen.tsx
src/Components/VoiceSelectMenu/: voiceselectmenu.tsx
src/Models/: AudioConfig.tsx  CustomEventPayload.tsx  Project.tsx
src/Screens/: TypingScreen.tsx
src/Screens/NewFileScreen/: newfilescreen.css  newfilescreen.tsx
src/Screens/SettingsScreen/: settings.css  settings.tsx
src/Screens/TypingScreen/: typingscreen.css  typingscreen.tsx
